Closed
Bug 1380552
Opened 7 years ago
Closed 7 years ago
Web platform test of PaymentRequestUpdateEvent constructor (secure context) fails
Categories
(Core :: DOM: Web Payments, defect)
Core
DOM: Web Payments
Tracking
()
RESOLVED
FIXED
mozilla56
Tracking | Status | |
---|---|---|
firefox56 | --- | fixed |
People
(Reporter: ben.tian, Assigned: ben.tian)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
1.10 KB,
patch
|
baku
:
review+
alchen
:
feedback+
|
Details | Diff | Splinter Review |
Web platform test of PaymentRequestUpdateEvent constructor (secure context) fails: https://w3c-test.org/payment-request/payment-request-update-event-constructor.https.html [PaymentRequestUpdateEvent can be constructed with an EventInitDict, even if not trusted] assert_false: constructed in script, so not be trusted expected false got true -- Note bug 1379925 patch is required to run the test now, otherwise test crashes when constructing PaymentRequestUpdateEvent.
Assignee | ||
Comment 1•7 years ago
|
||
Attachment #8886014 -
Flags: review?(amarchesini)
Attachment #8886014 -
Flags: feedback?(alchen)
Assignee | ||
Updated•7 years ago
|
Attachment #8886014 -
Attachment description: Bug 1380552 - Do not override method |IsTrusted| in PaymentRequestUpdateEvent → Patch 1 (v1): Do not override method |IsTrusted| in PaymentRequestUpdateEvent
Updated•7 years ago
|
Attachment #8886014 -
Flags: feedback?(alchen) → feedback+
Assignee | ||
Comment 2•7 years ago
|
||
Comment on attachment 8886014 [details] [diff] [review] [final] Patch 1: Do not override method |IsTrusted| in PaymentRequestUpdateEvent, f=alchen, r=baku May need to rebase according to bug 1379925 comment 4. Cancel r? first.
Attachment #8886014 -
Flags: review?(amarchesini)
Assignee | ||
Comment 3•7 years ago
|
||
Comment on attachment 8886014 [details] [diff] [review] [final] Patch 1: Do not override method |IsTrusted| in PaymentRequestUpdateEvent, f=alchen, r=baku No need to revise. Restore r?.
Attachment #8886014 -
Flags: review?(amarchesini)
Comment 4•7 years ago
|
||
Comment on attachment 8886014 [details] [diff] [review] [final] Patch 1: Do not override method |IsTrusted| in PaymentRequestUpdateEvent, f=alchen, r=baku Review of attachment 8886014 [details] [diff] [review]: ----------------------------------------------------------------- Be sure that SetTrusted(true) has been called before dispatching the event.
Attachment #8886014 -
Flags: review?(amarchesini) → review+
Assignee | ||
Comment 5•7 years ago
|
||
(In reply to Andrea Marchesini [:baku] from comment #4) > Be sure that SetTrusted(true) has been called before dispatching the event. Yes it's called in http://searchfox.org/mozilla-central/rev/cef8389c687203085dc6b52de2fbd0260d7495bf/dom/payments/PaymentRequest.cpp#558
Assignee | ||
Updated•7 years ago
|
Attachment #8886014 -
Attachment description: Patch 1 (v1): Do not override method |IsTrusted| in PaymentRequestUpdateEvent → [final] Patch 1: Do not override method |IsTrusted| in PaymentRequestUpdateEvent, f=alchen, r=baku
Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/770646a7519a Do not override method |IsTrusted| in PaymentRequestUpdateEvent. r=baku
Keywords: checkin-needed
Comment 7•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/770646a7519a
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in
before you can comment on or make changes to this bug.
Description
•