Bug 1380552 - Do not override method |IsTrusted| in PaymentRequestUpdateEvent. r=baku

MozReview-Commit-ID: C1DoziVe6F0